# misty-firmware

./: CMakeLists.txt  config-api.md  sdkconfig.defaults
main/: CMakeLists.txt  air_sensor.cpp  air_sensor.hpp  config_server.cpp  config_server.hpp  cron_manager.cpp  cron_manager.hpp  idf_component.yml  index.html  misty_main.cpp  mjson.c  net_configurator.cpp  net_configurator.hpp  pin_defs.cpp  pin_defs.hpp  pump_manager.cpp  pump_manager.hpp  sched_manager.cpp  sched_manager.hpp
main/driver/: drv8833.cpp  drv8833.hpp  hdc2080.cpp  hdc2080.hpp
